--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "PHOTON platform-projector"
+name = "photon-platform-projector"
 dynamic = ["version"]
 authors = [
   { name="phi ARCHITECT", email="github@phiarchitect.com" },
@@ -19,7 +19,7 @@ dependencies = [
 ]
 
 [project.scripts]
-projector = "photon platform.projector.__main__:main"
+projector = "photon_platform.projector.__main__:main"
 
 [build-system]
 requires = ["setuptools", "setuptools-scm"]
@@ -27,13 +27,13 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 where = ["src"]
-include = ["photon platform"]
+include = ["photon_platform"]
 namespaces = true
 
 [tool.setuptools.dynamic]
-version = {attr = "photon platform.projector.__version__"}
+version = {attr = "photon_platform.projector.__version__"}
 
 [project.urls]
-"Website" = "https://PHOTON platform.github.io/projector"
-"Repository" = "https://github.com/PHOTON platform/projector"
-"Issues" = "https://github.com/PHOTON platform/projector/issues"
+"Website" = "https://platform-platform.github.io/projector"
+"Repository" = "https://github.com/platform-platform/projector"
+"Issues" = "https://github.com/platform-platform/projector/issues"
